design search view

--- a/TMMovies/Core/Resources/Info.plist
+++ b/TMMovies/Core/Resources/Info.plist
@@ -13,6 +13,7 @@
 		<string>Poppins-SemiBold.ttf</string>
 		<string>Montserrat-VariableFont_wght.ttf</string>
 		<string>Poppins-Medium.ttf</string>
+		<string>Poppins-Regular.ttf</string>
 	</array>
 </dict>
 </plist>
