add analytics and disclaimer

--- a/TMMovies.xcodeproj/xcshareddata/xcschemes/TMMovies.xcscheme
+++ b/TMMovies.xcodeproj/xcshareddata/xcschemes/TMMovies.xcscheme
@@ -77,6 +77,24 @@
             ReferencedContainer = "container:TMMovies.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
+      <EnvironmentVariables>
+         <EnvironmentVariable
+            key = "-FIRDebugEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+         <EnvironmentVariable
+            key = "-FIRAnalyticsDebugEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </EnvironmentVariable>
+      </EnvironmentVariables>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
